--- a/index.html
+++ b/index.html
@@ -1,18 +1,38 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Canaviva CBD THC</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Documento</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 16px;
+            background: #f0f0f0;
+            font-family: Arial, sans-serif;
+        }
+        .page {
+            max-width: 900px;
+            margin: 0 auto 20px auto;
+            background: white;
+            padding: 0;
+            border-radius: 4px;
+            box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+        }
+        .page img {
+            width: 100%;
+            display: block;
+            border-radius: 4px;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <h1>CANNAVIVA CBD THC</h1>
 
-        <div class="logo">
-            <img src="brascann-revive-logo.png" alt="Company Logo">
-        </div>
-    </div>
+    <div class="page"><img src="saida-001.png" loading="lazy" alt="Página 1"></div>
+    <div class="page"><img src="saida-002.png" loading="lazy" alt="Página 2"></div>
+    <div class="page"><img src="saida-003.png" loading="lazy" alt="Página 3"></div>
+    <div class="page"><img src="saida-004.png" loading="lazy" alt="Página 4"></div>
+    <div class="page"><img src="saida-005.png" loading="lazy" alt="Página 5"></div>
+
 </body>
 </html>
